--- a/dssh/index.html
+++ b/dssh/index.html
@@ -24,6 +24,8 @@
 		<a class="externalLink" href="http://bmky.net/data/sh/">#1</a>, 
 		<a class="externalLink" href="http://shindds.cside4.com/sidel/soulhackers/capture-zigen.htm">#2</a> 
 		 공략 웹사이트의 자료를 번역했습니다.</li>
+		<!-- 추가된 sh_map.pdf 링크 -->
+		<li><a class="externalLink" href="sh_map.pdf" target="_blank">맵 지도 (PDF)</a></li>
 	</ul>
 </div>
 
