--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>공략의 제국</title>
+    <!-- 검색 엔진 최적화를 위한 메타 태그 추가 -->
+    <meta name="description" content="블로그 '공략의 제국'의 게임 공략 아카이브를 깃허브 페이지로 정리한 모음입니다. 다양한 고전 게임 공략을 제공합니다.">
+    <meta name="keywords" content="게임 공략, 고전 게임, 아카이브, RPG 공략, 어드벤처 공략, 깃허브 페이지, 여신전생, 몬스터헌터, SD건담, 로맨싱 사가, 데빌 서머너, 마이트 앤 매직, 드래곤 퀘스트">
+    <meta name="author" content="anonymous">
+    <!-- Tailwind CSS 및 폰트 설정 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
@@ -34,77 +39,75 @@
             <a href="./dq3/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 SFC 드래곤 퀘스트 3 공략 바로가기
             </a>
-			<a href="./dq4/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./dq4/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 드래곤 퀘스트 4 공략 바로가기
             </a>
-			<a href="./dq5/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./dq5/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS2 드래곤 퀘스트 5 공략 바로가기
             </a>
-			<a href="./dq7/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./dq7/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 드래곤 퀘스트 7 공략 바로가기
             </a>
-			<a href="./dra-x/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./dra-x/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 악마성 드라큘라 X 월하의 야상곡 공략 바로가기
             </a>
-			<a href="./dssh/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./dssh/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 데빌서머너 소울해커즈 공략 바로가기
             </a>
-			<a href="./dvs2/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./dvs2/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 DS 데빌서바이버 2 공략 바로가기
             </a>
-			<a href="./ggsp/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./ggsp/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS2 SD건담 G제네레이션 스피릿츠 공략 바로가기
             </a>
-			<a href="./ggwars/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./ggwars/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS2 SD건담 G제네레이션 워즈 공략 바로가기
             </a>
-			<a href="./lang2-sfc/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./lang2-sfc/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 SFC 데어 랑그릿사 공략 바로가기
             </a>
-			<a href="./mhp3/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./mhp3/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PSP 몬스터 헌터 포터블 서드 공략 바로가기
             </a>
-			<a href="./mm7/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./mm7/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PC 마이트 & 매직 7 공략 바로가기
             </a>
-						<a href="./mm8/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./mm8/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PC 마이트 & 매직 8 공략 바로가기
             </a>
-						<a href="./p2s/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./p2s/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 페르소나2 죄 공략 바로가기
             </a>
-						<a href="./p2b/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./p2b/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 페르소나2 벌 공략 바로가기
             </a>
-						<a href="./roma2/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./roma2/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 SFC 로맨싱 사가 2 공략 바로가기
             </a>
-						<a href="./roma3/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./roma3/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 SFC 로맨싱 사가 3 공략 바로가기
             </a>
-						<a href="./sam10/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./sam10/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PC 삼국지 10 공략 바로가기
             </a>
-						<a href="./sgf/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./sgf/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 사가 프론티어 공략 바로가기
             </a>
-						<a href="./smt1/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./smt1/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 진 여신전생 공략 바로가기
             </a>
-						<a href="./smt2/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./smt2/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 GBA 진 여신전생 2 공략 바로가기
             </a>
-						<a href="./smt-if/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./smt-if/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS1 진 여신전생 if... 공략 바로가기
             </a>
-						<a href="./smt-sj/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./smt-sj/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 DS 진・여신전생 STRANGE JOURNEY 공략 바로가기
             </a>
-						<a href="./srw3a/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
+            <a href="./srw3a/" class="bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-xl transition duration-300 transform hover:scale-105 shadow-md">
                 PS2 제3차 슈퍼로봇대전 알파 공략 바로가기
             </a>
-			
-            <!-- 여기에 모든 게임 공략 링크를 추가하세요. -->
         </div>
     </div>
 </body>
